# Carbon

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Readme.md  arm-none-eabi.cmake
applications/: CMakeLists.txt
applications/bare_metal_blinky/: CMakeLists.txt  app.cpp
applications/neopixel-controller/: CMakeLists.txt  FreeRTOSConfig.h  app.cpp
applications/neopixel_controller/: CMakeLists.txt  app.cpp  neopixel_controller.cpp  neopixel_controller.h  neopixel_lookup_table.cpp
cmake/: AddEmbeddedExecutable.cmake  CompilerWarnings.cmake
linker/: Readme.md  efr32bg22-standalone.ld
notes/: recover-bricked-device.md
platform/: CMakeLists.txt  exit.cpp  fault-handlers.cpp
platform/include/platform/: assert.h  reset.h
platform/include/platform/types/: a.out  main.cpp  view.h
platform/source/: assert.cpp  exceptions.cpp  reset.cpp  syscall.cpp
platform/stdlib/: CMakeLists.txt  exit.cpp
